fixed bugs with redirections, overflow

--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     background-color: black;
+    overflow: hidden;
 }
 
 .login-field {
@@ -170,6 +171,10 @@
         width: 80%;
     }
 
+    .login-text {
+        font-size: 20px;
+    }
+
     .login-check {
         color:rgb(140, 233, 0);
     }
@@ -213,3 +218,9 @@
         scale: 3;
     }
 }
+
+@media (max-width: 376px) {
+    .login-title {
+        font-size: 65px;
+    }
+} /*special for iphone SE*/
